# chatty

./: Bot.cabal  Bot.hs  BotWeb.hs  Brain.hs  ParseAIML.hs  ParsePattern.hs  ProcessBotTags.hs  README.md  Setup.lhs  logfile.txt  proj.hs
cgi-bin/: test.hi  test.hs
chatbot/: authors.html  chat.html  index.html  layout.css  references.html
